[gd_scene load_steps=16 format=3 uid="uid://b03vvl0vuyato"]

[ext_resource type="Texture2D" uid="uid://bn1kl7o324x4f" path="res://Sprites/Enemies/Enemy2.png" id="1_omlm7"]
[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_vsgi0"]
[ext_resource type="PackedScene" uid="uid://bpb5faj655oig" path="res://scenes/components/hit_flash_component.tscn" id="2_f5ve6"]
[ext_resource type="PackedScene" uid="uid://byb4skpiakxcm" path="res://scenes/components/health_component.tscn" id="2_rjqgv"]
[ext_resource type="Shader" path="res://vfx/whiten/whiten.gdshader" id="2_y1ft7"]
[ext_resource type="PackedScene" uid="uid://cmf8xxnb7p2db" path="res://scenes/components/hurtbox_component.tscn" id="5_hd7ec"]
[ext_resource type="PackedScene" uid="uid://b3vmhadtjij6r" path="res://scenes/components/hitbox_component.tscn" id="7_qabo3"]

[sub_resource type="Animation" id="Animation_dmof2"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:shape:size")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(13, 7), Vector2(13, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.5, 12.5), Vector2(-0.5, 13.5)]
}

[sub_resource type="Animation" id="Animation_gsx52"]
resource_name = "Dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2nf1a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, 12.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fi44d"]
_data = {
"Dead": SubResource("Animation_gsx52"),
"Idle": SubResource("Animation_dmof2"),
"RESET": SubResource("Animation_2nf1a")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_el3g5"]
resource_local_to_scene = true
shader = ExtResource("2_y1ft7")
shader_parameter/whiten = true
shader_parameter/mix_weight = 0.0
shader_parameter/alpha = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6sdk6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clgab"]
size = Vector2(13, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6jowu"]
size = Vector2(13, 7)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_vsgi0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_fi44d")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_rjqgv")]
max_health = 2.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("2_f5ve6")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_el3g5")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_hd7ec")]
collision_layer = 32
collision_mask = 9
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_6sdk6")
debug_color = Color(0.847059, 0.345098, 0.392157, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 12.5)
shape = SubResource("RectangleShape2D_clgab")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_omlm7")
hframes = 7
vframes = 2

[node name="RayCastX" type="RayCast2D" parent="."]
position = Vector2(5, 14)
target_position = Vector2(10, 0)

[node name="RayCastY" type="RayCast2D" parent="."]
position = Vector2(8, 16)
target_position = Vector2(0, 10)

[node name="HitboxComponent" parent="." instance=ExtResource("7_qabo3")]
collision_layer = 4
collision_mask = 2
damage = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-0.5, 12.5)
shape = SubResource("RectangleShape2D_6jowu")
